--- a/HTML task/HTML-Task3.html
+++ b/HTML task/HTML-Task3.html
@@ -12,15 +12,15 @@
         <tr>
           <td width="750">
             <p>Click any of the following links</p>
-            <a  href="https://www.linkedin.com/in/rohan-murali-815a8b2a1/" target="_blank">Opens in New</a>
+            <a  href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/" target="_blank">Opens in New</a>
             <cite>|</cite>
-            <a href="https://www.linkedin.com/in/rohan-murali-815a8b2a1/" target="_self">Opens in Self</a>
+            <a href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/" target="_self">Opens in Self</a>
             <cite>|</cite>
-            <a href="https://www.linkedin.com/in/rohan-murali-815a8b2a1/" target="_parent">Opens in Parent</a>
+            <a href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/" target="_parent">Opens in Parent</a>
             <cite>|</cite>
-            <a href="https://www.linkedin.com/in/rohan-murali-815a8b2a1/" target="_body">Opens in Body</a>
+            <a href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/" target="_body">Opens in Body</a>
             <cite>|</cite>
-            <a href="mailto:rohanmurali2004@gmail.com">Send email</a>
+            <a href="mailto:debdwaipayan02@gmail.com">Send email</a>
           </td>
         </tr>
       </table>
