--- a/CSS task/CSS-Task2.html
+++ b/CSS task/CSS-Task2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul id="hor">
-        <li><a class="active" href="https://github.com/RohanMurali3101">Home</a></li>
+        <li><a class="active" href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/">Home</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
         <li><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></li>
         <li><a href="https://en.wikipedia.org/wiki/CSS">CSS</a></li>
@@ -18,7 +18,7 @@
     <center>
         <br>
         <ul id="ver">
-            <li><a class="active" href="https://github.com/RohanMurali3101">Home</a></li>
+            <li><a class="active" href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/">Home</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
             <li><a href="https://en.wikipedia.org/wiki/CSS">CSS</a></li>
             <li><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></li>
