--- a/CSS task/CSS-Task5.html
+++ b/CSS task/CSS-Task5.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div id="nav">
-        <a class="active" id="hmpg" href="https://github.com/RohanMurali3101">Home page</a>
+        <a class="active" id="hmpg" href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/">Home page</a>
         <a id="mus" href="https://www.google.com/search?q=musings">Musings</a>
         <a id="mytwn" href="https://en.wikipedia.org/wiki/Bangalore">My City</a>
         <a id="CSS" href="https://en.wikipedia.org/wiki/CSS">CSS</a>
-        <a id="lnks" href="https://www.linkedin.com/in/rohan-murali-815a8b2a1/">Links</a>
+        <a id="lnks" href="https://www.linkedin.com/in/debdwaipayan-biswas-597476220/">Links</a>
     </div>
     <div id="content">
         <h1>My first styled page</h1>
