--- a/index.html
+++ b/index.html
@@ -93,5 +93,101 @@
             </td>
         </tr>
     </table>
+
+    <table style="border: 1px solid black;margin-bottom: 50px;">
+        <tr><h4 style="margin: 0;">Bootstrap tasks:</h4></tr>
+        <th>Task name</th>
+        <th>Task link</th>
+        <tr>
+            <td>Task 1</td>
+            <td>
+                <a href="./Bootstrap Tasks/BS-Task1.html">Task 1 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td>
+                <a href="./Bootstrap Tasks/BS-Task2.html">Task 2 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td>
+                <a href="./Bootstrap Tasks/BS-Task3.html">Task 3 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td>
+                <a href="./Bootstrap Tasks/BS-Task4.html">Task 4 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td>
+                <a href="./Bootstrap Tasks/BS-Task5.html">Task 5 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 6</td>
+            <td>
+                <a href="./Bootstrap Tasks/BS-Task6.html">Task 6 Link</a>
+            </td>
+        </tr>
+    </table>
+
+    <table style="border: 1px solid black;margin-bottom: 50px;">
+        <tr><h4 style="margin: 0;">Javascript tasks:</h4></tr>
+        <th>Task name</th>
+        <th>Task link</th>
+        <tr>
+            <td>Task 1</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task1.html">Task 1 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task2.html">Task 2 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task3.html">Task 3 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task4.html">Task 4 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task5.html">Task 5 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 6</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task6.html">Task 6 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 7</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task7.html">Task 7 Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Task 8</td>
+            <td>
+                <a href="./JavaScript Tasks/JS-Task8.html">Task 8 Link</a>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
